2005-05-20  John Sullivan  <sullivan@apple.com>

        Reviewed by Chris.
        
        - fixed <rdar://problem/4126160> Crash sending mouse-exited event after reloading 
        page with resizable textarea

        * kwq/KWQTextArea.mm:
        (-[KWQTextAreaTextView resetCursorRects]):
        This was some side effect of tracking rect code used for resizable textareas. I discovered
        that I didn't need the tracking rect code at all (at least to achieve the level of only-somewhat-working
        cursor behavior that I already had). Removing it caused the bug to vanish.

2005-05-19  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.
        
        - turned off exceptions and RTTI; seems to cut WebCore code size by about 35%

        * WebCore.pbproj/project.pbxproj: Turn off exceptions and RTTI for the framework.

2005-05-19  Darin Adler  <darin@apple.com>

        Reviewed by Chris Petersen.

        - fixed a mistake I introduced in my previous check-in that caused a Deployment build failure

        * kwq/DOM.mm: (-[DOMDocument createTreeWalker::::]): Initialize cppFilter to 0, which fixes both
        the build failure and a potential bug!

2005-05-17  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.
        No new layout tests required.

        - remove all dependencies on exceptions and RTTI (but don't turn them off yet, that will be in a later patch)

        * WebCore.pbproj/project.pbxproj: Set a new KHTML_NO_CPLUSPLUS_DOM define.
        Removed all C++ DOM wrapper files that we don't need to compile any more.

        * khtml/dom/css_stylesheet.h: Added more KHTML_NO_CPLUSPLUS_DOM checks so we don't include any
        headers when including this file.

        * khtml/dom/dom2_events.h: Fixed up KHTML_NO_CPLUSPLUS_DOM checks so that everything but EventListener
        is turned off when that's on. Also moved the public so that the constants from KeyboardEvent are public.